_site/materials/Treća godina/PPJ/Vežbe/Rokovi/jan2_2018_logika/v2/jan2_2018_logika/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: izraz
    4        | ID DODELA izraz
    5        | LIST_ID DODELA lista_izraz

    6 izraz: izraz CONJ izraz
    7      | izraz DISJ izraz
    8      | izraz IMPL izraz
    9      | izraz EQ izraz
   10      | '!' izraz
   11      | '(' izraz ')'
   12      | TRUE
   13      | FALSE
   14      | UNDEF
   15      | ID
   16      | HEAD '(' lista_izraz ')'
   17      | LIST_ID '[' BROJ ']'

   18 lista_izraz: LIST_ID
   19            | TAIL '(' lista_izraz ')'
   20            | '[' lista ']'

   21 lista: lista ',' izraz
   22      | izraz


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '!' (33) 10
    '(' (40) 11 16 19
    ')' (41) 11 16 19
    ',' (44) 21
    '[' (91) 17 20
    ']' (93) 17 20
    error (256)
    DODELA (258) 4 5
    CONJ (259) 6
    DISJ (260) 7
    IMPL (261) 8
    EQ (262) 9
    TRUE (263) 12
    FALSE (264) 13
    UNDEF (265) 14
    HEAD (266) 16
    TAIL (267) 19
    ID <s> (268) 4 15
    LIST_ID <s> (269) 5 17 18
    BROJ <val> (270) 17


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    program (24)
        on left: 1 2
        on right: 0 1
    naredba (25)
        on left: 3 4 5
        on right: 1 2
    izraz <l> (26)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 3 4 6 7 8 9 10 11 21 22
    lista_izraz <l> (27)
        on left: 18 19 20
        on right: 5 16 19
    lista <l> (28)
        on left: 21 22
        on right: 20 21


State 0

    0 $accept: • program $end

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 6
    LIST_ID  shift, and go to state 7
    '('      shift, and go to state 8

    program  go to state 9
    naredba  go to state 10
    izraz    go to state 11


State 1

   10 izraz: '!' • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 14


State 2

   12 izraz: TRUE •

    $default  reduce using rule 12 (izraz)


State 3

   13 izraz: FALSE •

    $default  reduce using rule 13 (izraz)


State 4

   14 izraz: UNDEF •

    $default  reduce using rule 14 (izraz)


State 5

   16 izraz: HEAD • '(' lista_izraz ')'

    '('  shift, and go to state 15


State 6

    4 naredba: ID • DODELA izraz
   15 izraz: ID •

    DODELA  shift, and go to state 16

    $default  reduce using rule 15 (izraz)


State 7

    5 naredba: LIST_ID • DODELA lista_izraz
   17 izraz: LIST_ID • '[' BROJ ']'

    '['     shift, and go to state 17
    DODELA  shift, and go to state 18


State 8

   11 izraz: '(' • izraz ')'

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 19


State 9

    0 $accept: program • $end
    1 program: program • naredba '\n'

    $end     shift, and go to state 20
    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 6
    LIST_ID  shift, and go to state 7
    '('      shift, and go to state 8

    naredba  go to state 21
    izraz    go to state 11


State 10

    2 program: naredba • '\n'

    '\n'  shift, and go to state 22


State 11

    3 naredba: izraz •
    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24
    IMPL  shift, and go to state 25
    EQ    shift, and go to state 26

    $default  reduce using rule 3 (naredba)


State 12

   15 izraz: ID •

    $default  reduce using rule 15 (izraz)


State 13

   17 izraz: LIST_ID • '[' BROJ ']'

    '['  shift, and go to state 17


State 14

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz
   10      | '!' izraz •

    $default  reduce using rule 10 (izraz)


State 15

   16 izraz: HEAD '(' • lista_izraz ')'

    '['      shift, and go to state 27
    TAIL     shift, and go to state 28
    LIST_ID  shift, and go to state 29

    lista_izraz  go to state 30


State 16

    4 naredba: ID DODELA • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 31


State 17

   17 izraz: LIST_ID '[' • BROJ ']'

    BROJ  shift, and go to state 32


State 18

    5 naredba: LIST_ID DODELA • lista_izraz

    '['      shift, and go to state 27
    TAIL     shift, and go to state 28
    LIST_ID  shift, and go to state 29

    lista_izraz  go to state 33


State 19

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz
   11      | '(' izraz • ')'

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24
    IMPL  shift, and go to state 25
    EQ    shift, and go to state 26
    ')'   shift, and go to state 34


State 20

    0 $accept: program $end •

    $default  accept


State 21

    1 program: program naredba • '\n'

    '\n'  shift, and go to state 35


State 22

    2 program: naredba '\n' •

    $default  reduce using rule 2 (program)


State 23

    6 izraz: izraz CONJ • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 36


State 24

    7 izraz: izraz DISJ • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 37


State 25

    8 izraz: izraz IMPL • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 38


State 26

    9 izraz: izraz EQ • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 39


State 27

   20 lista_izraz: '[' • lista ']'

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 40
    lista  go to state 41


State 28

   19 lista_izraz: TAIL • '(' lista_izraz ')'

    '('  shift, and go to state 42


State 29

   18 lista_izraz: LIST_ID •

    $default  reduce using rule 18 (lista_izraz)


State 30

   16 izraz: HEAD '(' lista_izraz • ')'

    ')'  shift, and go to state 43


State 31

    4 naredba: ID DODELA izraz •
    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24
    IMPL  shift, and go to state 25
    EQ    shift, and go to state 26

    $default  reduce using rule 4 (naredba)


State 32

   17 izraz: LIST_ID '[' BROJ • ']'

    ']'  shift, and go to state 44


State 33

    5 naredba: LIST_ID DODELA lista_izraz •

    $default  reduce using rule 5 (naredba)


State 34

   11 izraz: '(' izraz ')' •

    $default  reduce using rule 11 (izraz)


State 35

    1 program: program naredba '\n' •

    $default  reduce using rule 1 (program)


State 36

    6 izraz: izraz • CONJ izraz
    6      | izraz CONJ izraz •
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz

    $default  reduce using rule 6 (izraz)


State 37

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    7      | izraz DISJ izraz •
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz

    CONJ  shift, and go to state 23

    $default  reduce using rule 7 (izraz)


State 38

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    8      | izraz IMPL izraz •
    9      | izraz • EQ izraz

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24
    EQ    shift, and go to state 26

    $default  reduce using rule 8 (izraz)


State 39

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz
    9      | izraz EQ izraz •

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24

    $default  reduce using rule 9 (izraz)


State 40

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz
   22 lista: izraz •

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24
    IMPL  shift, and go to state 25
    EQ    shift, and go to state 26

    $default  reduce using rule 22 (lista)


State 41

   20 lista_izraz: '[' lista • ']'
   21 lista: lista • ',' izraz

    ']'  shift, and go to state 45
    ','  shift, and go to state 46


State 42

   19 lista_izraz: TAIL '(' • lista_izraz ')'

    '['      shift, and go to state 27
    TAIL     shift, and go to state 28
    LIST_ID  shift, and go to state 29

    lista_izraz  go to state 47


State 43

   16 izraz: HEAD '(' lista_izraz ')' •

    $default  reduce using rule 16 (izraz)


State 44

   17 izraz: LIST_ID '[' BROJ ']' •

    $default  reduce using rule 17 (izraz)


State 45

   20 lista_izraz: '[' lista ']' •

    $default  reduce using rule 20 (lista_izraz)


State 46

   21 lista: lista ',' • izraz

    '!'      shift, and go to state 1
    TRUE     shift, and go to state 2
    FALSE    shift, and go to state 3
    UNDEF    shift, and go to state 4
    HEAD     shift, and go to state 5
    ID       shift, and go to state 12
    LIST_ID  shift, and go to state 13
    '('      shift, and go to state 8

    izraz  go to state 48


State 47

   19 lista_izraz: TAIL '(' lista_izraz • ')'

    ')'  shift, and go to state 49


State 48

    6 izraz: izraz • CONJ izraz
    7      | izraz • DISJ izraz
    8      | izraz • IMPL izraz
    9      | izraz • EQ izraz
   21 lista: lista ',' izraz •

    CONJ  shift, and go to state 23
    DISJ  shift, and go to state 24
    IMPL  shift, and go to state 25
    EQ    shift, and go to state 26

    $default  reduce using rule 21 (lista)


State 49

   19 lista_izraz: TAIL '(' lista_izraz ')' •

    $default  reduce using rule 19 (lista_izraz)
